DayEvent invitation email context is tested. Pending for TimeEvent